--- a/stylesheets/design1.css
+++ b/stylesheets/design1.css
@@ -147,10 +147,15 @@ table {
 		margin: 0;
 		padding: 6.9% 0;
 	}
+	#slogan{
+		color: #0aa5ff;
+		margin: 42% 3% 60% 3%;
+		font-family: 'Kanit', sans-serif;
+		text-shadow: 1px 2px 2px black;
+	}
 	#logo{
-		width: 100%;
+		width: 30%;
 		display: block;
-		margin: 0 auto;
 	}
 	#pagewrap {
 		width: 100%;
