--- a/stylesheets/design1.css
+++ b/stylesheets/design1.css
@@ -1,10 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-v2.0 | 20110126
-License: none (public domain)
-*/ 
-
-/* NOLLSTÄLLNING AV CSS I WEBLÄSARE! BÖRJAN*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -14,320 +7,384 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
+
 body {
-	line-height: 1;
+  line-height: 1;
 }
+
 ol, ul {
-	list-style: none;
+  list-style: none;
 }
+
 blockquote, q {
-	quotes: none;
+  quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+  content: '';
+  content: none;
 }
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-/*NOLLSTÄLLNING AV CSS I WEBLÄSARE! SLUT*/
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
 /*MOBIL LAYOUT*/
+@media only screen and (max-width : 768px) {
+  body {
+    width: 100%;
+    font: 17px "Source Sans Pro", Helvetica, Arial, sans-serif;
+    background: white;
+  }
 
-@media only screen and (max-width : 768px){
+  #hembg {
+    background-image: url(../img/blossomreallysmall.png);
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-attachment: fixed;
+  }
 
-	body{
-		width: 100%;
-		font: 17px "Source Sans Pro", Helvetica, Arial, sans-serif;
-		background: white;
-	}
+  nav ul {
+    text-align: center;
+    padding: 6% 0;
+  }
 
-	#hembg {
-		background-image: url(../bilder/blossomreallysmall.png);
-		width: 100%;
-		height: 100%;
-		background-repeat: no-repeat;
-		background-position: center top;
-		background-attachment: fixed;
-	}
+  nav ul li {
+    display: inline;
+    margin: 2%;
+  }
 
-	nav ul {
-		text-align: center;
-		padding: 6% 0;
-	}
-	nav ul li {
-		display: inline;
-		margin: 2%;
-	}
+  nav ul li a {
+    /*4 länkarna i toppen*/
+    font-size: 1.5em;
+    font-weight: bolder;
+    color: lightblue;
+    text-shadow: 3px 3px #10590b;
+    text-decoration: none;
+  }
 
-	nav ul li a {                           /*4 länkarna i toppen*/
-		font-size: 1.5em;
-		font-weight: bolder;
-		color: lightblue;
-		text-shadow: 3px 3px #10590b;
-		text-decoration: none;
-	}
-	nav ul li a:hover {
-		color:skyblue;
-	}
-	nav ul li a:active {
-		color:deepskyblue;
-	}
-	/* Style the navigation menu */                               /* TOP NAV MENU */ 
+  nav ul li a:hover {
+    color: skyblue;
+  }
 
-	.topnav {
-		overflow: hidden;
-		background-color: #A6FFE512;
-		position: relative;
-	}
+  nav ul li a:active {
+    color: deepskyblue;
+  }
 
-	/* Hide the links inside the navigation menu (except for logo/home) */
-	.topnav #myLinks {
-		display: none;
-	}
+  /* Style the navigation menu */
+  /* TOP NAV MENU */
+  .topnav {
+    overflow: hidden;
+    background-color: #A6FFE512;
+    position: relative;
+  }
 
-	/* Style navigation menu links */
-	.topnav a {
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  .topnav #myLinks {
+    display: none;
+  }
 
-		padding: 14px 16px;
-		font-weight: bolder;
-		color: #FFA6EF;
-		text-shadow: 2px 2px #9D172D;
-		text-decoration: none;
-		font-size: 17px;
-		display: block;
+  /* Style navigation menu links */
+  .topnav a {
+    padding: 14px 16px;
+    font-weight: bolder;
+    color: #FFA6EF;
+    text-shadow: 2px 2px #9D172D;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
 
-	}
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 
+  /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+    color: #F79EEA;
+    text-shadow: 2px 2px #B0223A;
+  }
 
-	/* Style the hamburger menu */
-	.topnav a.icon {
-		background: black;
-		display: block;
-		position: absolute;
-		right: 0;
-		top: 0;
-	}
+  /* Style the active link (or home/logo) */
+  .active {
+    background-color: #FFA6EF3D;
+    color: white;
+    padding: 2px 0 0 0;
+  }
 
-	/* Add a grey background color on mouse-over */
-	.topnav a:hover {
-		color:#F79EEA;
-		text-shadow: 2px 2px #B0223A;
-	}
+  .luft {
+    margin: 0;
+    padding: 3% 0 4%;
+  }
 
-	/* Style the active link (or home/logo) */
-	.active {
-		background-color: #FFA6EF3D;
-		color: white;
-	}
-	.luft {
-		margin: 0;
-		padding: 3% 0 4%;
-	}
-	.mindreluft {
-		margin: 0;
-		padding: 6.9% 0;
-	}
-	#slogan{
-		color: #5de1ff;
-		margin: 42% 3% 60% 3%;
-		font-family: 'Kanit', sans-serif;
-		text-shadow: 1px 2px 20px black;
-	}
-	#logo{
-		width: 30%;
-		display: block;
-	}
-	#pagewrap {
-		width: 100%;
-		background-color: #7be3ee;
-		padding: 8% 0 0 0;
-	}
+  .mycketluft {
+    margin: 0;
+    padding: 0% 0% 40% 0%;
+  }
 
+  .mindreluft {
+    margin: 0;
+    padding: 6.9% 0;
+  }
 
-	h1 { /*3 SNABBA TITEL*/
-		font-family: "Kanit", Helvetica, Arial, sans-serif;
-		font-size: 2em;
-		text-align: center;
-		color: #0a0839;
-		text-shadow: 2px 2px 2px #67c3ff;
-	}
-	
-	h2{
-		font-size: 1.276em;
-		text-align: center;
-		line-height: 1.5em;
-		margin: 4% 0 2% 0;
-	}
-	#reviews p { /*Undertexten*/
-		width: 90%;
-		font-family: "Kanit", Helvetica, Arial, sans-serif;
-		margin: 0 0 10% 0;
-		align-content: center;
-		text-align: center;
-		color: black;
-	}
-	#reviews h5 { /*Enskilda reviews*/
-		margin: 3%;
-		font-family: 'Segoe UI', Helvetica, Arial, sans-serif;
-		font-weight: 400;
-	}
-	table { /*Lunchmenyn*/
-		width: 150%;
-		font-family: 'Segoe UI', Helvetica, Arial, sans-serif;
-	}
-	td {
-		height: 35px;
-		vertical-align: middle;
-		padding: 10px;
-	}
-	tr:nth-child(even) { /*Byter färg på varannan vilket ökar läsligheten*/
-		background-color: #5bcad6;
-	}
-	
+  #slogan {
+    color: #5de1ff;
+    margin: 0% 3% 7% 3%;
+    font-family: 'Kanit', sans-serif;
+    text-shadow: 1px 2px 20px black;
+  }
 
-	tr th{ 
-		display: none; 
-	}
-	tr td:last-child{
-		display: none;
-	}
+  #underslogan {
+    color: #5de1ff;
+    margin: 12% 3% 7% 3%;
+    font-family: 'Kanit', sans-serif;
+    text-shadow: 1px 2px 20px black;
+  }
 
-	.brodtext p {
-		text-align: justify;
-		line-height: 1.5em;
-		font-size: 1.1em;
-	}
-	.colorbox {
-		background-color: #7be3ee;
-		padding: 4% 0 4% 0;
-		margin: 5% 0 0 0%;
-	}
+  #logo {
+    width: 25%;
+    display: block;
+  }
 
-	.colorbox p{
-		color: white;
-		text-align: center;
-	} 
+  #pagewrap {
+    width: 100%;
+    background-color: #7be3ee;
+    padding: 8% 0 0 0;
+  }
 
-	.media{
-		width: 98%;
-		line-height: 3em;
-		text-align: center;
-	}
+  h1 {
+    /*3 SNABBA TITEL*/
+    font-family: "Kanit", Helvetica, Arial, sans-serif;
+    font-size: 2em;
+    text-align: center;
+    color: #0a0839;
+    text-shadow: 2px 2px 2px #67c3ff;
+  }
 
-	.video{
-		width: 372px;
-		height: 269px;
-	}
-	form{
-		margin: 0 0 10% 0;
-	}
-	input{
-		width: 100%;
-		background: #20b3b333; 
-	}
-	input[type=text]{
-		color: #8ceeff;
-		text-shadow: 1px 2px #1d5b66;
-		font-family: "Sniglet", Helvetica, Arial, sans-serif;
-		text-align: center;
-		width: 99%;
-		font-size:1.5em;
-		margin: 2% 0;
-		padding: 0 0 0 1%;
-		border: 1px solid black;
-	}
-	#textarea{
-		padding: 0 0 20% 1%;
-		border: 1px solid black;
-	}
-	input[type=button], input[type=submit], input[type=reset]{
-		background-color: black;
-		font-family: "Sniglet", Helvetica, Arial, sans-serif;
-		color: white;
-		border: 3px solid darkmagenta;
-		font-size: 1.6em;
-		padding: 1% 0;
-		margin: 2% 0 50% 0;
-	}
-	#slideshow{
-		display: none;
-	}
-	#slideshowtextmobil{
-		width: 80%;
-		padding: 50% 10%;
-		background-image: url(../bilder/sajber.jpg);
-		background-repeat: no-repeat;
-		background-position: center;
-		background-attachment: local;
-	}
-	#slideshowtextmobil h1{ /*Bildspel quote*/
-		line-height: 0.8em;
-		color: white;
-		text-shadow: 3px 2px #a30bb0;
-		font-weight: 100;
-	}
-	#slideshowtextmobil h2{ /*Albert einstein*/
-		line-height: 0.8em;
-		color: white;
-		text-shadow: 3px 2px #a30bb0;
-		font-weight: 100;
-		padding: 0 0 0 1.5em;
-		font-size: 1.6em;
-	}
-	footer{
-		padding: 3%;
-		background-color: #fc90ee;
-	}
-	footer ul {
-		text-align: center;
-		padding: 6% 0 0 0;
-	}
+  h2 {
+    font-size: 1.276em;
+    text-align: center;
+    line-height: 1.5em;
+    margin: 4% 0 2% 0;
+  }
 
-	footer ul li {
-		display: inline;
-		margin: 0 2%;
-	}
+  #reviews p {
+    /*Undertexten*/
+    width: 90%;
+    font-family: "Kanit", Helvetica, Arial, sans-serif;
+    margin: 0 0 10% 0;
+    align-content: center;
+    text-align: center;
+    color: black;
+  }
 
-	footer ul li a {
-		font-size: 1.3em;
-		font-weight: bold;
-		color: #330066;
-		text-decoration: none;
-	}
-	footer ul li a:hover {
-		color:#51069c;
-	}
-	footer ul li a:active {
-		color:#000000;
-	}
-	footer p{  /*Adress*/
-		text-align: center;
-		color: #fce0ff;
-		text-decoration: none;
-	}
-	footer p a{  /*Adress*/
-		color: #fce0ff;
-		text-decoration: none;
-	}
+  #reviews h5 {
+    /*Enskilda reviews*/
+    margin: 3%;
+    font-family: 'Segoe UI', Helvetica, Arial, sans-serif;
+    font-weight: 400;
+  }
+
+  table {
+    /*Lunchmenyn*/
+    width: 150%;
+    font-family: 'Segoe UI', Helvetica, Arial, sans-serif;
+  }
+
+  td {
+    height: 35px;
+    vertical-align: middle;
+    padding: 10px;
+  }
+
+  tr:nth-child(even) {
+    /*Byter färg på varannan vilket ökar läsligheten*/
+    background-color: #5bcad6;
+  }
+
+  tr th {
+    display: none;
+  }
+
+  tr td:last-child {
+    display: none;
+  }
+
+  .brodtext p {
+    text-align: justify;
+    line-height: 1.5em;
+    font-size: 1.1em;
+  }
+
+  .colorbox {
+    background-color: #7be3ee;
+    padding: 4% 0 4% 0;
+    margin: 5% 0 0 0%;
+  }
+
+  .colorbox p {
+    color: white;
+    text-align: center;
+  }
+
+  .media {
+    width: 98%;
+    line-height: 3em;
+    text-align: center;
+  }
+
+  .video {
+    width: 372px;
+    height: 269px;
+  }
+
+  form {
+    margin: 5%;
+  }
+
+  input {
+    width: 100%;
+    background: #20b3b333;
+  }
+
+  input[type=text], input[type=date], input[type=email] {
+    /*Text input*/
+    color: #8ceeff;
+    text-shadow: 1px 2px #1d5b66;
+    font-family: "Kanit", Helvetica, Arial, sans-serif;
+    width: 99%;
+    font-size: 1.5em;
+    margin: 2% 0;
+    padding: 0 0 0 1%;
+    border: 1px solid black;
+  }
+
+  .dropdown {
+    font-family: "Kanit", Helvetica, Arial, sans-serif;
+    color: #000099;
+    background-color: #00ccff36;
+  }
+
+  #textarea {
+    padding: 0 0 20% 1%;
+    border: 1px solid black;
+  }
+
+  input[type=button], input[type=submit], input[type=reset] {
+    /*Knappar*/
+    background-color: black;
+    font-family: "Sniglet", Helvetica, Arial, sans-serif;
+    color: white;
+    border: 3px solid #cc33ff40;
+    font-size: 1.6em;
+    padding: 1% 0;
+    margin: 2% 0 5% 0;
+  }
+
+  label {
+    color: #ccffff;
+    font-family: "Kanit", Helvetica, Arial, sans-serif;
+  }
+
+  #slideshow {
+    display: none;
+  }
+
+  #slideshowtextmobil {
+    width: 80%;
+    padding: 50% 10%;
+    background-image: url(../img/sajber.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: local;
+  }
+
+  #slideshowtextmobil h1 {
+    /*Bildspel quote*/
+    line-height: 0.8em;
+    color: white;
+    text-shadow: 3px 2px #a30bb0;
+    font-weight: 100;
+  }
+
+  #slideshowtextmobil h2 {
+    /*Rektor*/
+    line-height: 0.8em;
+    color: white;
+    text-shadow: 3px 2px #a30bb0;
+    font-weight: 100;
+    padding: 0 0 0 1.5em;
+    font-size: 1.6em;
+  }
+
+  footer {
+    background-image: url(../img/blossomreallysmall.png);
+    padding: 3%;
+    background-color: #7be3ee;
+  }
+
+  footer ul {
+    text-align: center;
+    padding: 6% 0 0 0;
+  }
+
+  footer ul li {
+    display: inline;
+    margin: 0 2%;
+  }
+
+  footer ul li a {
+    font-size: 1.3em;
+    font-weight: bold;
+    color: #FFA6EF;
+    text-shadow: 2px 2px #9D172D;
+    text-decoration: none;
+  }
+
+  footer ul li a:hover {
+    color: #ffccf6;
+  }
+
+  footer ul li a:active {
+    color: #000000;
+  }
+
+  footer p {
+    /*Adress*/
+    text-align: center;
+    color: #fce0ff;
+    text-decoration: none;
+  }
+
+  footer p a {
+    /*Adress*/
+    color: #fce0ff;
+    text-decoration: none;
+  }
 }
-
